[package]
name = "icp_token_wallet_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
candid = "0.8.3"                                   # For Candid serialization/deserialization
ic-cdk = "0.17.1"                                  # Latest compatible version with dfx 0.25.0
ic-cdk-macros = "0.17.1"                           # Macros for Internet Computer functions
once_cell = "1.17.1"


[dev-dependencies]
ic-cdk = "0.17.1"  


